--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,20 @@
-# Pinterest Giriş Bilgileri
-PINTEREST_EMAIL=ornek_email@gmail.com
-PINTEREST_PASSWORD=ornek_guvenli_sifre_12345
+# Pinterest Login Credentials
+PINTEREST_EMAIL=your.email@example.com
+PINTEREST_PASSWORD=your_secure_password
 
-# Chrome Profil Yolu (opsiyonel - Windows)
+# Chrome Profile Path (optional - Windows example)
 # CHROME_PROFILE_PATH=C:\Users\YourUsername\AppData\Local\Google\Chrome\User Data
 
-# Pano Ayarları
-SOURCE_BOARD_URL=https://tr.pinterest.com/TheK3R1M/anime/
-TARGET_BOARD_NAME=Deneme
+# Board Settings
+SOURCE_BOARD_URL=https://www.pinterest.com/username/source-board/
+TARGET_BOARD_NAME=Target Board
 
-# Selenium Ayarları
+# Selenium Settings
 HEADLESS_MODE=false
 SCROLL_PAUSE_TIME=0.8
 MAX_SCROLLS=200
 RANDOM_DELAY_MIN=2
 RANDOM_DELAY_MAX=5
 
-# Log Ayarları
+# Log Settings
 LOG_FAILED_PINS=true
-LOG_DIRECTORY=./logs
