🚀 v2.0: Major Feature Update
🚀 v2.0: Major Feature Update

✨ New Features:
- Smart auto-scroll (no more MAX_SCROLLS limit)
- Visual progress bar with tqdm
- Auto-resume from checkpoint (perfect for 1000+ pins)
- Retry failed pins command
- Duplicate detection
- Chrome error log suppression
- Smart 2FA polling (faster login)

🔧 Technical Changes:
- Refactored main.py with checkpoint system
- Adaptive scroll speed in pinterest_scraper.py
- Removed MAX_SCROLLS config (automatic detection)
- Added tqdm dependency

📚 Documentation:
- Updated README with new features
- Added retry mode usage examples
- Updated configuration table
- Marked completed tasks in CONTRIBUTING.md

🎯 Now supports 1000+ pins with full resume capability!

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ TARGET_BOARD_NAME=Target Board
 # Selenium Settings
 HEADLESS_MODE=false
 SCROLL_PAUSE_TIME=0.8
-MAX_SCROLLS=200
+# Note: MAX_SCROLLS removed - now uses smart auto-scroll detection
 RANDOM_DELAY_MIN=2
 RANDOM_DELAY_MAX=5
 
